@@ -1,3 +1,8 @@
+2015-July-26 Struan Robertson
+
+    * gDensityOfStates.cpp, HinderedRotorQM1D.cpp: Fix for enthalpy bug in
+    the ThermodynamicTable method.
+
 2015-August-01 Chris Morley
 
 	* src/ConditionsManager.cpp: tidy up and correct parsing of
